hphp/test/quick/exceptions4.php.expectf

Fatal error: Uncaught exception 'Exception' with message '' in %s/test/quick/exceptions4.php:5
Stack trace:
#0 %s/test/quick/exceptions4.php(18): A->__construct()
%a {main}
